start replacing Shader with Prog and Shdr for greater flexibility in handling different uniforms/attributes and boost filesystem directory discovery

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -84,6 +84,8 @@ add_library( ${name}  SHARED
                 Shader.cc
                 Demo.cc
                 VertexAttribute.cc
+                Prog.cc
+                Shdr.cc
 )
 
 SET(hdrs 
