add MultiVecNPY to hold multiple named views VecNPY of a single NPY buffer and rework Rdr to upload those views as OpenGL vertex attributes  referring to a single buffer (VBO), add p2l point-to-line geometry shader for visualizing GenStep using reworked Rdr, plus notes on idea for interpolated photon step animation based on line-to-point geometry shader with no CUDA presenter calls

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -34,6 +34,7 @@ add_definitions(
 add_library( ${name}  SHARED
     NumpyEvt.cpp
     VecNPY.cpp
+    MultiVecNPY.cpp
     GLMPrint.cpp
 )
 
@@ -49,6 +50,7 @@ GLMPrint.hpp
 NumpyEvt.hpp
 NPY.hpp
 VecNPY.hpp
+MultiVecNPY.hpp
 G4StepNPY.hpp
 numpy.hpp
 )
