create material to substance line into wavelength buffer mapping

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -43,6 +43,7 @@ add_library(${name} SHARED
                 GBorderSurface.cc
                 GSubstance.cc
                 GSubstanceLib.cc
+                GSubstanceLibMetadata.cc
                 GSolid.cc
                 GMesh.cc
                 GMergedMesh.cc
@@ -70,6 +71,7 @@ GSkinSurface.hh
 GBorderSurface.hh
 GSubstance.hh
 GSubstanceLib.hh
+GSubstanceLibMetadata.hh
 GVector.hh
 GMatrix.hh
 GNode.hh
