add NPY save methods to GAry and GProperty, use to debug InverseCDF construction, low wavelength edge problems : body of lookupSample matches the sampled one

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -33,6 +33,7 @@ add_definitions(
 
 add_library( ${name}  SHARED
     NumpyEvt.cpp
+    NPY.cpp
     VecNPY.cpp
     MultiVecNPY.cpp
     GLMPrint.cpp
