Scintillation/Cerenkov rays first strike geometry within OptiX machinery

--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -136,6 +136,7 @@ add_optix_executable( ${name}
       cu/pinhole_camera.cu
       cu/constantbg.cu
       cu/material1_radiance.cu 
+      cu/material1_propagate.cu 
       cu/TriangleMesh.cu 
 
       cu/generate.cu
