adding touch mode to OptiX machinery, aiming for a jump to geometry feature, NB need to do an OptiX raycast render before touch mode can operate

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library( ${name}  SHARED
                 Demo.cc
                 Prog.cc
                 Shdr.cc
+                Touchable.cc
 )
 
 SET(hdrs 
@@ -119,6 +120,7 @@ SET(hdrs
         gleq.h
         Prog.hh
         Shdr.hh
+        Touchable.hh
 )
 
 
