add ivec4 selection uniform to select boundary types to present in shader, add unique value counting to NPY preparing for boundary selection via ImGui menu

--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -41,6 +41,7 @@ add_library( ${name}  SHARED
     stringutil.cpp
     Lookup.cpp
     G4StepNPY.cpp
+    PhotonsNPY.cpp
 )
 
 set(LIBRARIES
@@ -59,6 +60,7 @@ NPY.hpp
 VecNPY.hpp
 MultiVecNPY.hpp
 G4StepNPY.hpp
+PhotonsNPY.hpp
 numpy.hpp
 stringutil.hpp
 Lookup.hpp
