--- a/numerics/npy/CMakeLists.txt
+++ b/numerics/npy/CMakeLists.txt
@@ -17,17 +17,20 @@ else ()
 endif ()
 
 
-find_package(Boost REQUIRED)
-find_package(GLM   REQUIRED)
+find_package(Boost  REQUIRED)
+find_package(Bregex REQUIRED)
+find_package(GLM    REQUIRED)
 
 include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS} 
+   ${Bregex_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
 )
 
 add_definitions( 
    ${Boost_DEFINITIONS} 
+   ${Bregex_DEFINITIONS} 
    ${GLM_DEFINITIONS} 
 )
 
@@ -46,6 +49,7 @@ add_library( ${name}  SHARED
 
 set(LIBRARIES
       ${Boost_LIBRARIES}
+      ${Bregex_LIBRARIES}
       ${GLM_LIBRARIES}
 )
 
