add Device to maintain list of uploaded NPY, aiming to allow alternative renderers to coexist without data duplication

--- a/graphics/oglrap/CMakeLists.txt
+++ b/graphics/oglrap/CMakeLists.txt
@@ -82,6 +82,7 @@ add_library( ${name}  SHARED
                 RendererBase.cc
                 Renderer.cc
                 RendererCfg.cc
+                Device.cc
                 Rdr.cc
                 Trackball.cc
                 TrackballCfg.cc
@@ -111,6 +112,7 @@ SET(hdrs
         Scene.hh
         SceneCfg.hh
         RendererBase.hh
+        Device.hh
         Rdr.hh
         Renderer.hh
         RendererCfg.hh
