--- a/graphics/ggeoview/CMakeLists.txt
+++ b/graphics/ggeoview/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
                       "$ENV{OPTIX_SDK_DIR}/CMake"
           ) 
 
+
+cmake_policy(SET CMP0054 NEW)
+
 include(EnvBuildOptions)
 
 set(BUILD_SHARED_LIBS ON)
