add color key for GMaterialIndex colors to GUI

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -15,10 +15,13 @@ find_package(Boost REQUIRED)
 find_package(GLM REQUIRED)
 find_package(NPY REQUIRED)
 
+find_package(ImGui REQUIRED)
+
 
 set(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
-   ${Boost_INCLUDE_DIRS} 
+   ${Boost_INCLUDE_DIRS}
+   ${ImGui_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
 )
@@ -26,10 +29,13 @@ set(INCLUDE_DIRS
 set(LIBRARIES
    ${Boost_LIBRARIES}
    ${NPY_LIBRARIES}
+   ${ImGui_LIBRARIES}
 )
 
 set(DEFINITIONS
    ${Boost_DEFINITIONS} 
+   ${ImGui_DEFINITIONS}
+   -DGUI_
 )
 
 include_directories(${INCLUDE_DIRS})   
