unpacking photon records, resolve photon vs record mismatch by restricting max_bounce < maxrec to avoid different truncation handling

--- a/optix/ggeo/CMakeLists.txt
+++ b/optix/ggeo/CMakeLists.txt
@@ -12,6 +12,7 @@ include(EnvBuildOptions)
 
 
 find_package(Boost REQUIRED)
+find_package(Bregex REQUIRED)
 find_package(GLM REQUIRED)
 find_package(NPY REQUIRED)
 
@@ -21,6 +22,7 @@ find_package(ImGui REQUIRED)
 set(INCLUDE_DIRS
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS}
+   ${Bregex_INCLUDE_DIRS} 
    ${ImGui_INCLUDE_DIRS} 
    ${GLM_INCLUDE_DIRS} 
    ${NPY_INCLUDE_DIRS}
@@ -28,12 +30,14 @@ set(INCLUDE_DIRS
 
 set(LIBRARIES
    ${Boost_LIBRARIES}
+   ${Bregex_LIBRARIES}
    ${NPY_LIBRARIES}
    ${ImGui_LIBRARIES}
 )
 
 set(DEFINITIONS
    ${Boost_DEFINITIONS} 
+   ${Bregex_DEFINITIONS} 
    ${ImGui_DEFINITIONS}
    -DGUI_
 )
@@ -71,6 +75,7 @@ add_library(${name} SHARED
                 GItemIndex.cc
                 GMaterialIndex.cc
                 GSurfaceIndex.cc
+                GFlagIndex.cc
                 GColors.cc
                 GColorMap.cc
 )
@@ -105,6 +110,7 @@ GCache.hh
 GItemIndex.hh
 GMaterialIndex.hh
 GSurfaceIndex.hh
+GFlagIndex.hh
 GColors.hh
 GColorMap.hh
 )
