following upgrade to CUDA 7.0, adopt libc++ for all ggeoview- libs including the problematic CUDA Thrust interface package: thrustrap-

--- a/numerics/thrustrap/CMakeLists.txt
+++ b/numerics/thrustrap/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
                       "$ENV{ENV_HOME}/cmake/Modules"
           ) 
 
-set(BUILD_SHARED_LIBS OFF)
+set(BUILD_SHARED_LIBS ON)
 
 # http://www.cmake.org/cmake/help/v3.0/module/FindCUDA.html
 
@@ -17,37 +17,34 @@ include(EnvBuildOptions)
 
 # following cudawrap-
 # see cuda- for commentary on this morass 
-#
 #set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20)
-#
-#
 # with below ... it builds but segfaults on running
 # will need to update CUDA version for c++11 presumably 
 
 message("CMAKE_CXX_COMPILER_ID:" ${CMAKE_CXX_COMPILER_ID})
 
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -stdlib=libstdc++")
-else ()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -stdlib=libstdc++")
-endif ()
+#if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
+#  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -stdlib=libstdc++")
+#else ()
+#  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -stdlib=libstdc++")
+#endif ()
 
 
-#find_package(Boost REQUIRED)
-#find_package(GLM  REQUIRED)
-#find_package(NPY  REQUIRED)
+find_package(Boost REQUIRED)
+find_package(GLM  REQUIRED)
+find_package(NPY  REQUIRED)
 
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
- #   ${Boost_INCLUDE_DIRS} 
- #   ${GLM_INCLUDE_DIRS} 
- #   ${NPY_INCLUDE_DIRS} 
+    ${Boost_INCLUDE_DIRS} 
+    ${GLM_INCLUDE_DIRS} 
+    ${NPY_INCLUDE_DIRS} 
     ${CUDA_INCLUDE_DIRS}
 )
 
 add_definitions(
-  #  ${Boost_DEFINITIONS}
+    ${Boost_DEFINITIONS}
 )
 
 CUDA_ADD_LIBRARY( ${name}  
@@ -57,18 +54,14 @@ CUDA_ADD_LIBRARY( ${name}
        make_sparse_histogram.cu
 )
 
-
 set(LIBRARIES
-   #   ${Boost_LIBRARIES}
-   #   ${NPY_LIBRARIES}
+      ${Boost_LIBRARIES}
+      ${NPY_LIBRARIES}
 )
  
 target_link_libraries( ${name} 
      ${LIBRARIES}
 )
-
-# -lc++ or -lstdc++
-
 
 #set_target_properties(${name} PROPERTIES LINKER_LANGUAGE CXX)
 
@@ -79,11 +72,7 @@ SET(hdrs
   histogram_sorted.h
   make_sparse_histogram.h
 )
-#SET(cuhdrs 
-#  cu/enums.h
-#)
 install(TARGETS ${name} DESTINATION lib)
 install(FILES ${hdrs} DESTINATION include)
-#install(FILES ${cuhdrs} DESTINATION include/cu)
 
 add_subdirectory(tests)
